<resources>
    <string name="app_name">My Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_date">Note Date</string>
    <string name="note_description">Note Description</string>
    <string name="complete_description">Complete Note Description</string>
    <string name="add_new_note">Add New Note</string>
    <string name="save_note">Save Note</string>
    <string name="copy_text">Copy Text</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="save">Save</string>
    <string name="share">Share Text</string>
    <string name="delete_desc">Are you sure you want to delete this note?</string>
    <string name="proceed">Proceed</string>
    <string name="note_inserted">New Note Inserted</string>
    <string name="note_deleted">Note Deleted</string>
    <string name="note_updated">Note Updated</string>
    <string name="text_copied">Note Text Copied</string>
</resources>