<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/clickToShow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/notes" />

        <LinearLayout
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_width="235dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/noteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:text="@string/note_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/noteDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_date"
                android:fontFamily="@font/noto_sans"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/arrowIcon"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/side_icon"
            app:tint="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/expandableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_description"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="@font/noto_sans"
                android:textColor="@color/black"/>

            <ImageView
                android:padding="10dp"
                android:id="@+id/operationsBtn"
                android:layout_marginStart="130dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/options_icon"
                app:tint="@color/black"/>

        </LinearLayout>

        <TextView
            android:id="@+id/noteDescription"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:text="@string/complete_description"
            android:textColor="@color/black"
            android:textSize="18sp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black"/>

</LinearLayout>